# autotools-project-template

./: .gitignore  Makefile.am  README.md  configure.ac
include/: project.h
src/: Makefile.am  main.c
