AC_PREREQ([2.69])
AC_INIT([Project],[1.0],[project-bugs@example.org])
AC_ARG_PROGRAM
AM_INIT_AUTOMAKE
AC_CONFIG_FILES([Makefile src/Makefile])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h:config.h.in])
AC_CHECK_HEADERS([unistd.h pthread.h])
AC_SEARCH_LIBS([pthread_create], [ptread])
AC_PROG_SED
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_OUTPUT
